fixed profile card z-index bug

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -36,6 +36,11 @@
     height: 5rem;
 }
 
+h5 {
+    position: relative;
+    z-index: 3;
+}
+
 .header {
     width: 100%;
     height: 5rem;
@@ -43,7 +48,7 @@
     flex-direction: column;
     padding-left: 30%;
     position: relative;
-    z-index: 4;
+    z-index: 10;
     justify-content: center;
 }
 
