--- a/src/components/profile_card/profile_card.scss
+++ b/src/components/profile_card/profile_card.scss
@@ -11,7 +11,7 @@
     margin-top: 2rem;
     margin-left: 1rem;
     flex-direction: column;
-    z-index: 1;
+    z-index: 3;
     align-items: flex-start;
     color: red;
 }
